// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullBleed /> by default should have the right structure 1`] = `
<FullBleed
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
>
  <Segment
    className="full-bleed"
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed"
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        hasRoundedCorners={false}
        imageHeight={null}
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        imageWidth={null}
        isAvatar={false}
        isCircular={false}
        isFluid={true}
        label={null}
        placeholderImageUrl={null}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            height={null}
            src="🐱🐱"
            title="Image Title"
            ui={true}
            width={null}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              height={null}
              src="🐱🐱"
              title="Image Title"
              width={null}
            />
          </Image>
        </picture>
      </ResponsiveImage>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`hasGradient\` is passed should have the right structure 1`] = `
<FullBleed
  hasGradient={true}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
>
  <Segment
    className="full-bleed has-gradient"
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-gradient"
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        hasRoundedCorners={false}
        imageHeight={null}
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        imageWidth={null}
        isAvatar={false}
        isCircular={false}
        isFluid={true}
        label={null}
        placeholderImageUrl={null}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            height={null}
            src="🐱🐱"
            title="Image Title"
            ui={true}
            width={null}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              height={null}
              src="🐱🐱"
              title="Image Title"
              width={null}
            />
          </Image>
        </picture>
      </ResponsiveImage>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`props.children > 0\` should have the right structure 1`] = `
<FullBleed
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
>
  <Segment
    className="full-bleed has-children"
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-children"
    >
      <ResponsiveImage
        alternativeText="Image Widget"
        hasRoundedCorners={false}
        imageHeight={null}
        imageNotFoundLabelText="Image not found!"
        imageTitle="Image Title"
        imageUrl="🐱🐱"
        imageWidth={null}
        isAvatar={false}
        isCircular={false}
        isFluid={true}
        label={null}
        placeholderImageUrl={null}
        sources={Array []}
      >
        <picture
          className="responsive-image is-fluid"
          role="figure"
        >
          <Image
            alt="Image Widget"
            as="img"
            avatar={false}
            fluid={true}
            height={null}
            src="🐱🐱"
            title="Image Title"
            ui={true}
            width={null}
          >
            <img
              alt="Image Widget"
              className="ui fluid image"
              height={null}
              src="🐱🐱"
              title="Image Title"
              width={null}
            />
          </Image>
        </picture>
      </ResponsiveImage>
      🏛
    </div>
  </Segment>
</FullBleed>
`;
